<resources>
    <string name="app_name">Messenger!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="type_message">Type Message</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>